--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "connect-multiparty": "^2.1.1",
     "cookie": "^0.3.1",
     "cookie-parse": "^0.4.0",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "ejs-locals": "^1.0.2",
@@ -19,7 +19,7 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jquery": "3.3.1",
-    "jsonwebtoken": "^8.2.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "5.2.8",
     "morgan": "~1.9.0",
     "mv": "^2.1.1",
